pamc/src/tests/sample_code/should_fail/type_check/labeledness_mismatch/labeled_fun_unlabeled_args.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let plus = fun plus_(left~-a: Nat, right~b: Nat): Nat {
    match a {
        .O => b,
        .S(a') => Nat.S(plus_(left: a', right: b)),
    }
};

let O = Nat.O;

let right = plus(left: O, right: O);
let wrong = plus(O, O);
